--- a/server/locales/ua.json
+++ b/server/locales/ua.json
@@ -1,16 +1,14 @@
 {
   "sorry_only_youtube": "Вибаче пане/пані, але я підтримую тільки youtube на даний момент.",
   "no_idea_what_to_do": "Я без поняття, що мені із цим робити.",
-  "language_list:": "Список мов:",
-  "language_list": "Список мов",
   "voice_list": "Список голосів:",
   "voice_changed": "Голос свинки успішно змінений.",
   "bad_volume_value": "Невірна гучність.",
   "volume_changed": "Гучність успішно змінена.",
   "change_voice_instructions": "У Вас є 2 варіанти, щоб змінити голос:\n - Натиснути на кнопку 'Список мов', вибрати мову, потім вибрати голос.\n - Натиснути на кнопку 'Список голосів' і вибрати голос.",
   "hello_message": "Ласкаво просимо! Назад виносимо! Напиши мені щось і я скажу це тобі у вічі. Для більшої інформації пиши /help",
-  "selected_voice": "Вибраний голос",
-  "change_voice": "Змінити голос",
+  "selected_voice": "Вибраний голос \uD83D\uDD0A",
+  "change_voice": "Змінити голос \uD83C\uDFA4",
   "command_list:": "список команд:",
   "call_menu": "/menu або /m -> викликати меню",
   "return_current_voice": "/selected або /sl -> показати вибраний голос",
@@ -22,5 +20,12 @@
   "user_do_not_have_clients": "На даний момент, ви не вибрали жодного клієнта, кому написати, виберіть клієнта надіславши /clients",
   "client": "Клієнт",
   "inactive, please try again later": "спить, спробуйте, будь ласка, пізніше.",
-  "menu": "Меню"
+  "menu": "Меню",
+  "unexpected_error": " Невідома помилка",
+  "localization": "Список мов",
+  "localization_changed": "Мову змінено",
+  "language": "Мова \uD83C\uDFF3️\u200D\uD83C\uDF08",
+  "en": "Англійська \uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC65\uDB40\uDC6E\uDB40\uDC67\uDB40\uDC7F",
+  "ua": "Соловїна \uD83C\uDDFA\uD83C\uDDE6",
+  "manage_clients": "Налаштування \uD83D\uDC37"
 }
