perf(client): client refactoring, change command name on server. Pig working

--- a/server/locales/ua.json
+++ b/server/locales/ua.json
@@ -12,11 +12,9 @@
   "command_list:": "список команд:",
   "call_menu": "/menu або /m -> викликати меню",
   "return_current_voice": "/selected або /sl -> показати вибраний голос",
-  "change_voice_help": "/change або /c -> викликає помічника для допомоги у зміні голосу",
-  "return_language_list": "/language або /l -> показати список всіх мов, якими я можу говорити",
-  "return_voice_list": "/voice або /v -> показати список всіх голосів, якими я можу говорити",
+  "change_voice_help": "/change -> викликає помічника для допомоги у зміні голосу",
   "stop_current_audio": "/stop або /s -> заткнути мені рота",
-  "change_volume_help": "/volume або /vl -> змінити гучність \n    значення за замовчуванням: -1\n    діапазон: -1<->10000, рекомендовано використовувати -1<->100\n    Приклади: /volume 100 (встановити гучність на повну - 100%) \n    /vl 123 (встановити гучність на 123%)\n    /volume   123 3 (встановити гучність на 1233%)",
+  "change_volume_help": "/volume або /vl -> змінити гучність \n    значення за замовчуванням: 100\n    діапазон: 1<->100",
   "user_do_not_have_clients": "На даний момент, ви не вибрали жодного клієнта, кому написати, виберіть клієнта надіславши /clients",
   "client": "Клієнт",
   "inactive, please try again later": "спить, спробуйте, будь ласка, пізніше.",
@@ -27,5 +25,6 @@
   "language": "Мова \uD83C\uDFF3️\u200D\uD83C\uDF08",
   "en": "Англійська \uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC65\uDB40\uDC6E\uDB40\uDC67\uDB40\uDC7F",
   "ua": "Соловїна \uD83C\uDDFA\uD83C\uDDE6",
-  "manage_clients": "Налаштування \uD83D\uDC37"
+  "manage_clients": "Налаштування \uD83D\uDC37",
+  "sorry_to_big": "Йосип босий! Воно дуже велике, давай менше ніж 1500 символів"
 }
