--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -12,11 +12,9 @@
   "command_list:": "Command list:",
   "call_menu": "/menu or /m -> call menu",
   "return_current_voice": "/selected or /sl -> return current voice",
-  "change_voice_help": "/change or /c -> help you to change voice change voice",
-  "return_language_list": "/language or /l -> return language list",
-  "return_voice_list": "/voice or /v -> return voice list",
+  "change_voice_help": "/change -> help you to change voice change voice",
   "stop_current_audio": "/stop or /s -> stop current audio",
-  "change_volume_help": "/volume or /vl -> change volume \n    default value: -1\n    range: -1<->10000, recommended range -1<->100\n    e.g. /volume 100 (set volume to 100) \n    /vl 123 (set volume to 123)\n    /volume   123 3 (set volume to 1233)",
+  "change_volume_help": "/volume or /vl -> change volume \n    default value: 100\n    range: 1<->100",
   "user_do_not_have_clients": "You don't have clients, select client use /clients",
   "client": "Client",
   "inactive, please try again later": "inactive, please try again later.",
@@ -26,5 +24,6 @@
   "language": "Language \uD83C\uDFF3️\u200D\uD83C\uDF08",
   "en": "English \uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC65\uDB40\uDC6E\uDB40\uDC67\uDB40\uDC7F",
   "ua": "Ukraine \uD83C\uDDFA\uD83C\uDDE6",
-  "manage_clients": "Manage \uD83D\uDC37"
+  "manage_clients": "Manage \uD83D\uDC37",
+  "sorry_to_big": "Ow... to much text, try send less than 1500 characters please"
 }
