feat(server): update localization

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -5,11 +5,10 @@
   "voice_changed": "Voice changed.",
   "bad_volume_value": "Bad volume value.",
   "volume_changed": "Volume changed.",
-  "change_voice_instructions": "You have 2 options to change voice:\n - Press 'Language list' button, select language then select voice.\n - Press 'Voice list' button and select voice.",
   "hello_message": "Welcome! Write me some text. \nFor more info use /help",
   "selected_voice": "My voice \uD83D\uDD0A",
   "change_voice": "Change voice \uD83C\uDFA4",
-  "command_list:": "Command list:",
+  "command_list": "Command list:",
   "call_menu": "/menu or /m -> call menu",
   "return_current_voice": "/selected or /sl -> return current voice",
   "change_voice_help": "/change -> help you to change voice change voice",
@@ -17,13 +16,14 @@
   "change_volume_help": "/volume or /vl -> change volume \n    default value: 100\n    range: 1<->100",
   "user_do_not_have_clients": "You don't have clients, select client use /clients",
   "client": "Client",
-  "inactive, please try again later": "inactive, please try again later.",
   "menu": "Menu",
+  "unexpected_error": "Unexpected error",
   "localization": "Languages",
   "localization_changed": "Language changed",
   "language": "Language \uD83C\uDFF3️\u200D\uD83C\uDF08",
   "en": "English \uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC65\uDB40\uDC6E\uDB40\uDC67\uDB40\uDC7F",
   "ua": "Ukraine \uD83C\uDDFA\uD83C\uDDE6",
   "manage_clients": "Manage \uD83D\uDC37",
-  "sorry_to_big": "Ow... to much text, try send less than 1500 characters please"
+  "sorry_to_big": "Ow... to much text, try send less than 1500 characters please",
+  "file_too_big": "Oww... File too big... Telegram allow to handle bot a file 25Mb or less"
 }
