--- a/server/locales/ua.json
+++ b/server/locales/ua.json
@@ -5,11 +5,10 @@
   "voice_changed": "Голос свинки успішно змінений.",
   "bad_volume_value": "Невірна гучність.",
   "volume_changed": "Гучність успішно змінена.",
-  "change_voice_instructions": "У Вас є 2 варіанти, щоб змінити голос:\n - Натиснути на кнопку 'Список мов', вибрати мову, потім вибрати голос.\n - Натиснути на кнопку 'Список голосів' і вибрати голос.",
   "hello_message": "Ласкаво просимо! Назад виносимо! Напиши мені щось і я скажу це тобі у вічі. Для більшої інформації пиши /help",
   "selected_voice": "Вибраний голос \uD83D\uDD0A",
   "change_voice": "Змінити голос \uD83C\uDFA4",
-  "command_list:": "список команд:",
+  "command_list": "список команд:",
   "call_menu": "/menu або /m -> викликати меню",
   "return_current_voice": "/selected або /sl -> показати вибраний голос",
   "change_voice_help": "/change -> викликає помічника для допомоги у зміні голосу",
@@ -17,7 +16,6 @@
   "change_volume_help": "/volume або /vl -> змінити гучність \n    значення за замовчуванням: 100\n    діапазон: 1<->100",
   "user_do_not_have_clients": "На даний момент, ви не вибрали жодного клієнта, кому написати, виберіть клієнта надіславши /clients",
   "client": "Клієнт",
-  "inactive, please try again later": "спить, спробуйте, будь ласка, пізніше.",
   "menu": "Меню",
   "unexpected_error": " Невідома помилка",
   "localization": "Список мов",
@@ -26,5 +24,6 @@
   "en": "Англійська \uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC65\uDB40\uDC6E\uDB40\uDC67\uDB40\uDC7F",
   "ua": "Соловїна \uD83C\uDDFA\uD83C\uDDE6",
   "manage_clients": "Налаштування \uD83D\uDC37",
-  "sorry_to_big": "Йосип босий! Воно дуже велике, давай менше ніж 1500 символів"
+  "sorry_to_big": "Йосип босий! Воно дуже велике, давай менше ніж 1500 символів",
+  "file_too_big": "Ой... файл дуже великий... телеграм дозволяє працювати з файлами не більше 25Мб"
 }
