--- a/server/locales/ua.json
+++ b/server/locales/ua.json
@@ -25,5 +25,6 @@
   "ua": "Соловїна \uD83C\uDDFA\uD83C\uDDE6",
   "manage_clients": "Налаштування \uD83D\uDC37",
   "sorry_to_big": "Йосип босий! Воно дуже велике, давай менше ніж 1500 символів",
-  "file_too_big": "Ой... файл дуже великий... телеграм дозволяє працювати з файлами не більше 25Мб"
+  "file_too_big": "Ой... файл дуже великий... телеграм дозволяє працювати з файлами не більше 25Мб",
+  "pig_say": "Свинка щось там рохнула:"
 }
