feat(server): show current state (language, voice, volume)

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -5,8 +5,9 @@
   "voice_changed": "Voice changed.",
   "bad_volume_value": "Bad volume value.",
   "volume_changed": "Volume changed.",
+  "volume": "Volume",
   "hello_message": "Welcome! Write me some text. \nFor more info use /help",
-  "selected_voice": "My voice \uD83D\uDD0A",
+  "selected_state": "My state \uD83E\uDDFE",
   "change_voice": "Change voice \uD83C\uDFA4",
   "command_list": "Command list:",
   "call_menu": "/menu or /m -> call menu",
