--- a/server/locales/ua.json
+++ b/server/locales/ua.json
@@ -5,8 +5,9 @@
   "voice_changed": "Голос свинки успішно змінений.",
   "bad_volume_value": "Невірна гучність.",
   "volume_changed": "Гучність успішно змінена.",
+  "volume": "Гучність",
   "hello_message": "Ласкаво просимо! Назад виносимо! Напиши мені щось і я скажу це тобі у вічі. Для більшої інформації пиши /help",
-  "selected_voice": "Вибраний голос \uD83D\uDD0A",
+  "selected_state": "Мій стан \uD83E\uDDFE",
   "change_voice": "Змінити голос \uD83C\uDFA4",
   "command_list": "список команд:",
   "call_menu": "/menu або /m -> викликати меню",
