feat(server): support goup chat

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -27,5 +27,6 @@
   "manage_clients": "Manage \uD83D\uDC37",
   "sorry_to_big": "Ow... to much text, try send less than 1500 characters please",
   "file_too_big": "Oww... File too big... Telegram allow to handle bot a file 25Mb or less",
-  "pig_say": "Pig say:"
+  "pig_say": "Pig say",
+  "hello_msg": "Hello, leather bastards!"
 }
