feat(server): bREAKING CHANGE (major): finish pig-config commands (db changes)
BREAKING CHANGE

BREAKING CHANGE: db changes: selectedClients chaged from array of objects to array of strings

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -2,7 +2,6 @@
   "sorry_only_youtube": "Sorry, I can support only youtube for now.",
   "no_idea_what_to_do": "I have no idea what to do with that.",
   "voice_list": "Voice list:",
-  "voice_changed": "Voice changed.",
   "bad_volume_value": "Bad volume value.",
   "volume_changed": "Volume changed.",
   "volume": "Volume",
@@ -20,7 +19,6 @@
   "menu": "Menu",
   "unexpected_error": "Unexpected error",
   "localization": "Languages",
-  "localization_changed": "Language changed",
   "language": "Language \uD83C\uDFF3️\u200D\uD83C\uDF08",
   "en": "English \uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC65\uDB40\uDC6E\uDB40\uDC67\uDB40\uDC7F",
   "ua": "Ukraine \uD83C\uDDFA\uD83C\uDDE6",
@@ -28,5 +26,17 @@
   "sorry_to_big": "Ow... to much text, try send less than 1500 characters please",
   "file_too_big": "Oww... File too big... Telegram allow to handle bot a file 25Mb or less",
   "pig_say": "Pig say",
-  "hello_msg": "Hello, leather bastards!"
+  "hello_msg": "Hello, leather bastards!",
+  "add_new_pig": "Add new pig",
+  "find_private_pig": "Find private pig",
+  "find_public_pig": "Find more pigs (public)",
+  "add_new_pig_instruction": "To add new pig client write this command: /add_client <client-name> <client-secret-key> <type: public|private> e.g. /add_client my-pig xyz-qwe-asd-fgh-cvbvds private",
+  "add_new_pig_error": "Something is missing, use this format: /add_client <client-name> <client-secret-key> <type: public|private> e.g. /add_client my-pig xyz-qwe-asd-fgh-cvbvds private",
+  "find_private_pig_instruction": "To find private pig client write this command: /find_client <client-secret-key> e.g. /find_client xyz-qwe-asd-fgh-cvbvds",
+  "find_private_pig_error": "Something is missing, use this format: /find_client <client-secret-key> e.g. /find_client xyz-qwe-asd-fgh-cvbvds",
+  "pig_list": "Pig list",
+  "no_pigs": "No pigs :(",
+  "no_pig": "No pig :(",
+  "done": "Done",
+  "not_found": "Not found"
 }
