--- a/server/locales/ua.json
+++ b/server/locales/ua.json
@@ -2,7 +2,6 @@
   "sorry_only_youtube": "Вибаче пане/пані, але я підтримую тільки youtube на даний момент.",
   "no_idea_what_to_do": "Я без поняття, що мені із цим робити.",
   "voice_list": "Список голосів:",
-  "voice_changed": "Голос свинки успішно змінений.",
   "bad_volume_value": "Невірна гучність.",
   "volume_changed": "Гучність успішно змінена.",
   "volume": "Гучність",
@@ -20,7 +19,6 @@
   "menu": "Меню",
   "unexpected_error": " Невідома помилка",
   "localization": "Список мов",
-  "localization_changed": "Мову змінено",
   "language": "Мова \uD83C\uDFF3️\u200D\uD83C\uDF08",
   "en": "Англійська \uD83C\uDFF4\uDB40\uDC67\uDB40\uDC62\uDB40\uDC65\uDB40\uDC6E\uDB40\uDC67\uDB40\uDC7F",
   "ua": "Соловїна \uD83C\uDDFA\uD83C\uDDE6",
@@ -28,5 +26,17 @@
   "sorry_to_big": "Йосип босий! Воно дуже велике, давай менше ніж 1500 символів",
   "file_too_big": "Ой... файл дуже великий... телеграм дозволяє працювати з файлами не більше 25Мб",
   "pig_say": "Свинка щось там рохнула",
-  "hello_msg": "Привіт, шкіряні ублюдки!"
+  "hello_msg": "Привіт, шкіряні ублюдки!",
+  "add_new_pig": "Додати нову свинку",
+  "find_private_pig": "Знайти приватну свинку",
+  "find_public_pig": "Знайти більше свиней",
+  "add_new_pig_instruction": "Щоб додати нову свиню надішли команду в наступному форматі: /add_client <назва-свинки> <секретний-ключ-свинки> <тип private|public>наприклад: /add_client моя-свиня xyz-qwe-asd-fgh-cvbvds private",
+  "add_new_pig_error": "Щось пішло не так, впевніться що використовуєте натупний формат(назва через '-'): /add_client <назва-свинки> <секретний-ключ-свинки> <тип private|public>наприклад: /add_client моя-свиня xyz-qwe-asd-fgh-cvbvds private",
+  "find_private_pig_instruction": "Щоб знайти приватну свинку напиши: /find_client <секретний-ключ-свинки> наприклад: /find_client xyz-qwe-asd-fgh-cvbvds",
+  "find_private_pig_error": "Щось пішло не так, впевніться що використовуєте натупний формат /find_client <секретний-ключ-свинки> наприклад: /find_client xyz-qwe-asd-fgh-cvbvds",
+  "pig_list": "Свинки",
+  "no_pigs": "Нема свинок :(",
+  "no_pig": "Нема свинки :(",
+  "done": "Вжух і все готово",
+  "not_found": "Не зміг знайти"
 }
